# mcp-sklearn

./: Dockerfile  README.md  docker-compose.yml  mcp_config.json  pyproject.toml
data/: sample.csv
server/: eda.py  preprocess.py  pyproject.toml  server.py
server/modules/: __init__.py  data_quality.py  dataclass.py  eda_analyzer.py
src/: __init__.py  main.py
