[tool.poetry]
name = "mcp-proto"
version = "0.1.0"
description = "MCP Proto Server"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

# ここをパッケージ名に合わせる
packages = [{ include = "mcp_proto" }]

[tool.poetry.dependencies]
python = ">=3.11"
mcp = ">=1.2.0"
pandas = ">=2.2.0"
pyarrow = ">=15.0.0"
langchain = ">=0.2.0"
langchain-openai = ">=0.1.0"
openai = ">=1.40.0"
tiktoken = "^0.12.0"
streamlit = "^1.50.0"
langchain-mcp-adapters = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
