[tool.poetry]
name = "mcp-proto"
version = "0.1.0"
description = "MCP Proto Server"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

# ここをパッケージ名に合わせる
packages = [{ include = "mcp_proto" }]

[tool.poetry.dependencies]
python = ">=3.10.1,<3.11.0"
mcp = ">=1.2.0"
pandas = ">=2.2.0"
pyarrow = ">=15.0.0"
scipy = "<1.16"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
